--- a/src/index.css
+++ b/src/index.css
@@ -62,12 +62,15 @@ main {
 }
 
 .accordion-item-content {
-  display: none;
-  padding: 1rem;
   background-color: #2c344a;
 }
 
+.close {
+  display: none;
+}
+
 .open {
+  padding: 1rem;
   display: block;
 }
 
